--- a/output.css
+++ b/output.css
@@ -521,44 +521,38 @@
   .collapse {
     visibility: collapse;
   }
+  .fixed {
+    position: fixed;
+  }
   .relative {
     position: relative;
   }
-  .-z-10 {
-    z-index: calc(10 * -1);
+  .sticky {
+    position: sticky;
+  }
+  .top-0 {
+    top: calc(var(--spacing) * 0);
+  }
+  .bottom-0 {
+    bottom: calc(var(--spacing) * 0);
+  }
+  .z-20 {
+    z-index: 20;
   }
   .col-span-2 {
     grid-column: span 2 / span 2;
   }
-  .col-start-2 {
-    grid-column-start: 2;
-  }
   .row-span-2 {
     grid-row: span 2 / span 2;
   }
-  .m-2 {
-    margin: calc(var(--spacing) * 2);
-  }
-  .m-10 {
-    margin: calc(var(--spacing) * 10);
-  }
   .mx-2 {
     margin-inline: calc(var(--spacing) * 2);
-  }
-  .mx-10 {
-    margin-inline: calc(var(--spacing) * 10);
   }
   .my-5 {
     margin-block: calc(var(--spacing) * 5);
   }
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
-  }
-  .line-clamp-2 {
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
   }
   .block {
     display: block;
@@ -581,50 +575,20 @@
   .table {
     display: table;
   }
-  .h-\[60vh\] {
-    height: 60vh;
-  }
-  .h-\[90\%\] {
-    height: 90%;
-  }
-  .h-\[95\%\] {
-    height: 95%;
-  }
-  .h-\[95\] {
-    height: 95;
-  }
-  .h-\[100vh\] {
-    height: 100vh;
-  }
   .w-1 {
     width: calc(var(--spacing) * 1);
   }
-  .w-1\/4 {
-    width: calc(1/4 * 100%);
+  .w-1\/2 {
+    width: calc(1/2 * 100%);
   }
-  .w-3 {
-    width: calc(var(--spacing) * 3);
-  }
-  .w-3\/4 {
-    width: calc(3/4 * 100%);
-  }
-  .w-\[90vh\] {
-    width: 90vh;
+  .w-10 {
+    width: calc(var(--spacing) * 10);
   }
   .w-\[90vw\] {
     width: 90vw;
   }
-  .w-\[95vw\] {
-    width: 95vw;
-  }
-  .w-\[100vw\] {
-    width: 100vw;
-  }
   .w-full {
     width: 100%;
-  }
-  .w-screen {
-    width: 100vw;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -635,26 +599,11 @@
   .resize {
     resize: both;
   }
-  .columns-2 {
-    columns: 2;
-  }
-  .grid-flow-col {
-    grid-auto-flow: column;
-  }
-  .grid-flow-row {
-    grid-auto-flow: row;
-  }
-  .grid-rows-2 {
-    grid-template-rows: repeat(2, minmax(0, 1fr));
-  }
   .grid-rows-3 {
     grid-template-rows: repeat(3, minmax(0, 1fr));
   }
   .grid-rows-4 {
     grid-template-rows: repeat(4, minmax(0, 1fr));
-  }
-  .grid-rows-5 {
-    grid-template-rows: repeat(5, minmax(0, 1fr));
   }
   .flex-col {
     flex-direction: column;
@@ -665,6 +614,9 @@
   .items-center {
     align-items: center;
   }
+  .justify-around {
+    justify-content: space-around;
+  }
   .justify-center {
     justify-content: center;
   }
@@ -673,9 +625,6 @@
   }
   .gap-0\.5 {
     gap: calc(var(--spacing) * 0.5);
-  }
-  .gap-1 {
-    gap: calc(var(--spacing) * 1);
   }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
@@ -698,26 +647,11 @@
   .self-center {
     align-self: center;
   }
-  .self-end {
-    align-self: flex-end;
-  }
-  .justify-self-center {
-    justify-self: center;
-  }
-  .justify-self-end {
-    justify-self: flex-end;
-  }
-  .justify-self-start {
-    justify-self: flex-start;
-  }
   .overflow-hidden {
     overflow: hidden;
   }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
-  }
-  .rounded-3xl {
-    border-radius: var(--radius-3xl);
   }
   .rounded-xl {
     border-radius: var(--radius-xl);
@@ -726,24 +660,18 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .border-hidden {
-    --tw-border-style: hidden;
-    border-style: hidden;
+  .border-y-4 {
+    border-block-style: var(--tw-border-style);
+    border-block-width: 4px;
   }
-  .border-\[\#C1CDDD\] {
-    border-color: #C1CDDD;
+  .border-t-\[\#AE9142\] {
+    border-top-color: #AE9142;
   }
-  .border-gray-500 {
-    border-color: var(--color-gray-500);
+  .border-b-\[\#081629\] {
+    border-bottom-color: #081629;
   }
   .bg-\[\#0C2340\] {
     background-color: #0C2340;
-  }
-  .bg-\[\#1D3A5F\] {
-    background-color: #1D3A5F;
-  }
-  .bg-\[\#2E4D74\] {
-    background-color: #2E4D74;
   }
   .bg-\[\#D2D2D2\] {
     background-color: #D2D2D2;
@@ -751,14 +679,8 @@
   .bg-\[\#E1E8F2\] {
     background-color: #E1E8F2;
   }
-  .bg-\[\#EDF2F9\] {
-    background-color: #EDF2F9;
-  }
-  .bg-\[bg-\[\#E1E8F2\]\] {
-    background-color: bg-[#E1E8F2];
-  }
-  .bg-blue-50 {
-    background-color: var(--color-blue-50);
+  .bg-white {
+    background-color: var(--color-white);
   }
   .bg-\[url\(\'images\/campus_spring_scenic-1200\.webp\'\)\] {
     background-image: url('images/campus_spring_scenic-1200.webp');
@@ -766,17 +688,11 @@
   .bg-cover {
     background-size: cover;
   }
-  .object-cover {
-    object-fit: cover;
-  }
   .object-fill {
     object-fit: fill;
   }
   .p-2 {
     padding: calc(var(--spacing) * 2);
-  }
-  .p-3 {
-    padding: calc(var(--spacing) * 3);
   }
   .p-4 {
     padding: calc(var(--spacing) * 4);
@@ -786,9 +702,6 @@
   }
   .p-10 {
     padding: calc(var(--spacing) * 10);
-  }
-  .px-3 {
-    padding-inline: calc(var(--spacing) * 3);
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
@@ -805,11 +718,8 @@
   .text-center {
     text-align: center;
   }
-  .text-left {
-    text-align: left;
-  }
-  .font-\[\'sumana\'\] {
-    font-family: 'sumana';
+  .text-right {
+    text-align: right;
   }
   .font-\[GPC\] {
     font-family: GPC;
@@ -819,9 +729,6 @@
   }
   .font-\[sumana\] {
     font-family: sumana;
-  }
-  .font-\[summana\] {
-    font-family: summana;
   }
   .text-2xl {
     font-size: var(--text-2xl);
@@ -835,41 +742,13 @@
     font-size: var(--text-4xl);
     line-height: var(--tw-leading, var(--text-4xl--line-height));
   }
-  .text-5xl {
-    font-size: var(--text-5xl);
-    line-height: var(--tw-leading, var(--text-5xl--line-height));
-  }
-  .text-8xl {
-    font-size: var(--text-8xl);
-    line-height: var(--tw-leading, var(--text-8xl--line-height));
-  }
-  .text-9xl {
-    font-size: var(--text-9xl);
-    line-height: var(--tw-leading, var(--text-9xl--line-height));
-  }
   .text-lg {
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
   }
-  .text-sm {
-    font-size: var(--text-sm);
-    line-height: var(--tw-leading, var(--text-sm--line-height));
-  }
   .text-xl {
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
-  }
-  .text-xl\/10 {
-    font-size: var(--text-xl);
-    line-height: calc(var(--spacing) * 10);
-  }
-  .text-xl\/11 {
-    font-size: var(--text-xl);
-    line-height: calc(var(--spacing) * 11);
-  }
-  .text-xl\/15 {
-    font-size: var(--text-xl);
-    line-height: calc(var(--spacing) * 15);
   }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
@@ -891,12 +770,6 @@
   .text-\[\#666768\] {
     color: #666768;
   }
-  .text-\[\#B1964D\] {
-    color: #B1964D;
-  }
-  .text-\[\#E1E8F2\] {
-    color: #E1E8F2;
-  }
   .text-\[\#d2d2d2\] {
     color: #d2d2d2;
   }
@@ -906,22 +779,12 @@
   .underline {
     text-decoration-line: underline;
   }
-  .opacity-70 {
-    opacity: 70%;
-  }
-  .opacity-80 {
-    opacity: 80%;
-  }
   .opacity-90 {
     opacity: 90%;
   }
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
-  }
-  .duration-200 {
-    --tw-duration: 200ms;
-    transition-duration: 200ms;
   }
   .duration-300 {
     --tw-duration: 300ms;
@@ -935,32 +798,10 @@
       }
     }
   }
-  .hover\:border-hidden {
-    &:hover {
-      @media (hover: hover) {
-        --tw-border-style: hidden;
-        border-style: hidden;
-      }
-    }
-  }
   .hover\:border-\[\#C1CDDD\] {
     &:hover {
       @media (hover: hover) {
         border-color: #C1CDDD;
-      }
-    }
-  }
-  .hover\:border-gray-500 {
-    &:hover {
-      @media (hover: hover) {
-        border-color: var(--color-gray-500);
-      }
-    }
-  }
-  .hover\:bg-\[\#0C2340\] {
-    &:hover {
-      @media (hover: hover) {
-        background-color: #0C2340;
       }
     }
   }
@@ -992,16 +833,6 @@
       }
     }
   }
-  .md\:z-10 {
-    @media (width >= 48rem) {
-      z-index: 10;
-    }
-  }
-  .md\:col-span-1 {
-    @media (width >= 48rem) {
-      grid-column: span 1 / span 1;
-    }
-  }
   .md\:col-span-2 {
     @media (width >= 48rem) {
       grid-column: span 2 / span 2;
@@ -1022,11 +853,6 @@
       grid-column-start: 2;
     }
   }
-  .md\:row-span-2 {
-    @media (width >= 48rem) {
-      grid-row: span 2 / span 2;
-    }
-  }
   .md\:row-start-1 {
     @media (width >= 48rem) {
       grid-row-start: 1;
@@ -1037,29 +863,9 @@
       margin: calc(var(--spacing) * 0);
     }
   }
-  .md\:my-5 {
-    @media (width >= 48rem) {
-      margin-block: calc(var(--spacing) * 5);
-    }
-  }
-  .md\:my-7 {
-    @media (width >= 48rem) {
-      margin-block: calc(var(--spacing) * 7);
-    }
-  }
-  .md\:my-10 {
-    @media (width >= 48rem) {
-      margin-block: calc(var(--spacing) * 10);
-    }
-  }
   .md\:my-20 {
     @media (width >= 48rem) {
       margin-block: calc(var(--spacing) * 20);
-    }
-  }
-  .md\:mt-10 {
-    @media (width >= 48rem) {
-      margin-top: calc(var(--spacing) * 10);
     }
   }
   .md\:mb-10 {
@@ -1077,34 +883,9 @@
       display: none;
     }
   }
-  .md\:h-\[50vh\] {
-    @media (width >= 48rem) {
-      height: 50vh;
-    }
-  }
-  .md\:h-\[60vh\] {
-    @media (width >= 48rem) {
-      height: 60vh;
-    }
-  }
-  .md\:h-\[90\%\] {
-    @media (width >= 48rem) {
-      height: 90%;
-    }
-  }
   .md\:w-1\/2 {
     @media (width >= 48rem) {
       width: calc(1/2 * 100%);
-    }
-  }
-  .md\:w-1\/4 {
-    @media (width >= 48rem) {
-      width: calc(1/4 * 100%);
-    }
-  }
-  .md\:w-3\/4 {
-    @media (width >= 48rem) {
-      width: calc(3/4 * 100%);
     }
   }
   .md\:w-\[90vw\] {
@@ -1116,33 +897,6 @@
     @media (width >= 48rem) {
       --tw-translate-y: calc(5% * -1);
       translate: var(--tw-translate-x) var(--tw-translate-y);
-    }
-  }
-  .md\:-translate-y-\[10\%\] {
-    @media (width >= 48rem) {
-      --tw-translate-y: calc(10% * -1);
-      translate: var(--tw-translate-x) var(--tw-translate-y);
-    }
-  }
-  .md\:translate-y-\[10\%\] {
-    @media (width >= 48rem) {
-      --tw-translate-y: 10%;
-      translate: var(--tw-translate-x) var(--tw-translate-y);
-    }
-  }
-  .md\:grid-flow-col {
-    @media (width >= 48rem) {
-      grid-auto-flow: column;
-    }
-  }
-  .md\:grid-flow-col-dense {
-    @media (width >= 48rem) {
-      grid-auto-flow: column dense;
-    }
-  }
-  .md\:grid-flow-row {
-    @media (width >= 48rem) {
-      grid-auto-flow: row;
     }
   }
   .md\:grid-cols-2 {
@@ -1160,19 +914,9 @@
       grid-template-columns: repeat(4, minmax(0, 1fr));
     }
   }
-  .md\:grid-cols-5 {
-    @media (width >= 48rem) {
-      grid-template-columns: repeat(5, minmax(0, 1fr));
-    }
-  }
   .md\:grid-rows-2 {
     @media (width >= 48rem) {
       grid-template-rows: repeat(2, minmax(0, 1fr));
-    }
-  }
-  .md\:grid-rows-3 {
-    @media (width >= 48rem) {
-      grid-template-rows: repeat(3, minmax(0, 1fr));
     }
   }
   .md\:flex-row {
@@ -1185,39 +929,9 @@
       flex-wrap: wrap;
     }
   }
-  .md\:justify-around {
-    @media (width >= 48rem) {
-      justify-content: space-around;
-    }
-  }
-  .md\:justify-between {
-    @media (width >= 48rem) {
-      justify-content: space-between;
-    }
-  }
   .md\:justify-center {
     @media (width >= 48rem) {
       justify-content: center;
-    }
-  }
-  .md\:justify-end {
-    @media (width >= 48rem) {
-      justify-content: flex-end;
-    }
-  }
-  .md\:gap-0 {
-    @media (width >= 48rem) {
-      gap: calc(var(--spacing) * 0);
-    }
-  }
-  .md\:gap-2 {
-    @media (width >= 48rem) {
-      gap: calc(var(--spacing) * 2);
-    }
-  }
-  .md\:gap-5 {
-    @media (width >= 48rem) {
-      gap: calc(var(--spacing) * 5);
     }
   }
   .md\:gap-10 {
@@ -1245,26 +959,6 @@
       justify-self: center;
     }
   }
-  .md\:justify-self-end {
-    @media (width >= 48rem) {
-      justify-self: flex-end;
-    }
-  }
-  .md\:p-10 {
-    @media (width >= 48rem) {
-      padding: calc(var(--spacing) * 10);
-    }
-  }
-  .md\:p-20 {
-    @media (width >= 48rem) {
-      padding: calc(var(--spacing) * 20);
-    }
-  }
-  .md\:p-24 {
-    @media (width >= 48rem) {
-      padding: calc(var(--spacing) * 24);
-    }
-  }
   .md\:px-10 {
     @media (width >= 48rem) {
       padding-inline: calc(var(--spacing) * 10);
@@ -1285,37 +979,9 @@
       padding-block: calc(var(--spacing) * 20);
     }
   }
-  .md\:pr-2 {
-    @media (width >= 48rem) {
-      padding-right: calc(var(--spacing) * 2);
-    }
-  }
-  .md\:text-end {
-    @media (width >= 48rem) {
-      text-align: end;
-    }
-  }
   .md\:text-right {
     @media (width >= 48rem) {
       text-align: right;
-    }
-  }
-  .md\:text-2xl {
-    @media (width >= 48rem) {
-      font-size: var(--text-2xl);
-      line-height: var(--tw-leading, var(--text-2xl--line-height));
-    }
-  }
-  .md\:text-3xl {
-    @media (width >= 48rem) {
-      font-size: var(--text-3xl);
-      line-height: var(--tw-leading, var(--text-3xl--line-height));
-    }
-  }
-  .md\:text-4xl {
-    @media (width >= 48rem) {
-      font-size: var(--text-4xl);
-      line-height: var(--tw-leading, var(--text-4xl--line-height));
     }
   }
   .md\:text-5xl {
@@ -1336,46 +1002,10 @@
       line-height: var(--tw-leading, var(--text-xl--line-height));
     }
   }
-  .md\:text-2xl\/15 {
-    @media (width >= 48rem) {
-      font-size: var(--text-2xl);
-      line-height: calc(var(--spacing) * 15);
-    }
-  }
-  .md\:text-3xl\/3 {
-    @media (width >= 48rem) {
-      font-size: var(--text-3xl);
-      line-height: calc(var(--spacing) * 3);
-    }
-  }
-  .md\:text-3xl\/10 {
-    @media (width >= 48rem) {
-      font-size: var(--text-3xl);
-      line-height: calc(var(--spacing) * 10);
-    }
-  }
   .md\:text-3xl\/12 {
     @media (width >= 48rem) {
       font-size: var(--text-3xl);
       line-height: calc(var(--spacing) * 12);
-    }
-  }
-  .md\:text-3xl\/15 {
-    @media (width >= 48rem) {
-      font-size: var(--text-3xl);
-      line-height: calc(var(--spacing) * 15);
-    }
-  }
-  .md\:text-xl\/15 {
-    @media (width >= 48rem) {
-      font-size: var(--text-xl);
-      line-height: calc(var(--spacing) * 15);
-    }
-  }
-  .md\:font-normal {
-    @media (width >= 48rem) {
-      --tw-font-weight: var(--font-weight-normal);
-      font-weight: var(--font-weight-normal);
     }
   }
   .lg\:z-10 {
@@ -1418,11 +1048,6 @@
       grid-row: span 3 / span 3;
     }
   }
-  .lg\:row-start-3 {
-    @media (width >= 64rem) {
-      grid-row-start: 3;
-    }
-  }
   .lg\:row-start-4 {
     @media (width >= 64rem) {
       grid-row-start: 4;
@@ -1436,16 +1061,6 @@
   .lg\:mx-10 {
     @media (width >= 64rem) {
       margin-inline: calc(var(--spacing) * 10);
-    }
-  }
-  .lg\:mt-10 {
-    @media (width >= 64rem) {
-      margin-top: calc(var(--spacing) * 10);
-    }
-  }
-  .lg\:mb-10 {
-    @media (width >= 64rem) {
-      margin-bottom: calc(var(--spacing) * 10);
     }
   }
   .lg\:mb-20 {
@@ -1463,6 +1078,11 @@
       display: grid;
     }
   }
+  .lg\:hidden {
+    @media (width >= 64rem) {
+      display: none;
+    }
+  }
   .lg\:h-\[90\%\] {
     @media (width >= 64rem) {
       height: 90%;
@@ -1473,19 +1093,19 @@
       height: 100vh;
     }
   }
-  .lg\:w-1\/4 {
+  .lg\:w-1\/2 {
     @media (width >= 64rem) {
-      width: calc(1/4 * 100%);
+      width: calc(1/2 * 100%);
     }
   }
-  .lg\:w-\[60vw\] {
+  .lg\:w-3\/4 {
     @media (width >= 64rem) {
-      width: 60vw;
+      width: calc(3/4 * 100%);
     }
   }
-  .lg\:w-\[65vw\] {
+  .lg\:w-20 {
     @media (width >= 64rem) {
-      width: 65vw;
+      width: calc(var(--spacing) * 20);
     }
   }
   .lg\:w-\[70vw\] {
@@ -1493,35 +1113,9 @@
       width: 70vw;
     }
   }
-  .lg\:w-\[80vw\] {
-    @media (width >= 64rem) {
-      width: 80vw;
-    }
-  }
-  .lg\:w-\[90vw\] {
-    @media (width >= 64rem) {
-      width: 90vw;
-    }
-  }
   .lg\:w-\[100vw\] {
     @media (width >= 64rem) {
       width: 100vw;
-    }
-  }
-  .lg\:max-w-\[60vh\] {
-    @media (width >= 64rem) {
-      max-width: 60vh;
-    }
-  }
-  .lg\:max-w-\[60vw\] {
-    @media (width >= 64rem) {
-      max-width: 60vw;
-    }
-  }
-  .lg\:-translate-y-\[10\%\] {
-    @media (width >= 64rem) {
-      --tw-translate-y: calc(10% * -1);
-      translate: var(--tw-translate-x) var(--tw-translate-y);
     }
   }
   .lg\:translate-y-\[5\%\] {
@@ -1606,16 +1200,6 @@
       gap: calc(var(--spacing) * 5);
     }
   }
-  .lg\:gap-10 {
-    @media (width >= 64rem) {
-      gap: calc(var(--spacing) * 10);
-    }
-  }
-  .lg\:place-self-end {
-    @media (width >= 64rem) {
-      place-self: end;
-    }
-  }
   .lg\:bg-\[\#EDF2F9\] {
     @media (width >= 64rem) {
       background-color: #EDF2F9;
@@ -1646,21 +1230,6 @@
       padding-right: calc(var(--spacing) * 20);
     }
   }
-  .lg\:pl-32 {
-    @media (width >= 64rem) {
-      padding-left: calc(var(--spacing) * 32);
-    }
-  }
-  .lg\:pl-48 {
-    @media (width >= 64rem) {
-      padding-left: calc(var(--spacing) * 48);
-    }
-  }
-  .lg\:pl-80 {
-    @media (width >= 64rem) {
-      padding-left: calc(var(--spacing) * 80);
-    }
-  }
   .lg\:text-2xl {
     @media (width >= 64rem) {
       font-size: var(--text-2xl);
@@ -1683,24 +1252,6 @@
     @media (width >= 64rem) {
       font-size: var(--text-7xl);
       line-height: var(--tw-leading, var(--text-7xl--line-height));
-    }
-  }
-  .lg\:text-8xl {
-    @media (width >= 64rem) {
-      font-size: var(--text-8xl);
-      line-height: var(--tw-leading, var(--text-8xl--line-height));
-    }
-  }
-  .lg\:text-9xl {
-    @media (width >= 64rem) {
-      font-size: var(--text-9xl);
-      line-height: var(--tw-leading, var(--text-9xl--line-height));
-    }
-  }
-  .lg\:text-lg {
-    @media (width >= 64rem) {
-      font-size: var(--text-lg);
-      line-height: var(--tw-leading, var(--text-lg--line-height));
     }
   }
   .lg\:text-xl {
